--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A Node.js API that calls a Python script for voice gender detection",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mime-types": "^3.0.1",
     "multer": "^1.4.4",
     "nodemon": "^3.1.10"
   }
